# muposys

./: .gitignore  Makefile.am  README  build-package.sh  configure.ac  copy-deps.sh  install-client  mps-v1.workspace  mps-v2.workspace  muposys-desk-dlls.sh  muposys.workspace
C++/apidb/: muposys-dev.apidb  muposys-r.apidb  muposys.apidb
C++/cgi/: Makefile.am  configure.ac
C++/cgi/database/: http  http.sql
C++/cgi/src/: Exception.hh  Mail.cc  Mail.hh  Makefile.am  application-server.cc  application-server.hh  building-apidb  http-db.cc  http-db.hh  http.cc  http.hh  login.cc  logout.cc  server.cc  server.hh  useradd.cc  userregister-methode.cc
C++/cgi/tests/: Makefile.am  main.cc  v0.cc  v0.hh
C++/console/: configure.ac
C++/console/src/: Makefile.am  commands.cc  commands.hh  main.cc  muposys.apidb  muposysdb.cpp  muposysdb.hpp  operations-db.cc  operations-db.hh
C++/gtk/: Makefile.am  configure.ac
C++/gtk/po/: es.po
C++/gtk/src/: Buys.cc  Buys.hh  Catalog.cc  Catalog.hh  Login.cc  Login.hh  Main.cc  Main.hh  Makefile.am  constants.h  main-mias.cc  main-muposys.cc  main.cc  mias.cc  mias.hh  muposys-main.cc  muposys.apidb  muposys.cc  muposys.hh  muposys.ui  muposysdb.cpp  muposysdb.hpp  resources.xml  sysapp.ui
C++/gtk/tests/: Makefile.am  Makefile.in  main.cc  v0.cc  v0.hh
C++/muposys-apidb/: muposys.apidb
C++/muposys-cgi/: configure.ac
C++/muposys-cgi/src/: Makefile.am  adduser.cc  application-server.cc  application-server.hh  application.cc  http-db.cc  http-db.hh  http.cc  http.hh  login-server.cc  login-server.hh  login.cc  logout.cc  server-elements.cc  server.cc  server.hh  useradd.cc
C++/muposys-gtk/src/: Login.cc  Login.hh  Makefile.am
C++/syapp-cgi/: configure.ac
C++/sysapp-apidb/: sysapp.apidb  sysappdb.apidb  sysappdb.cpp  sysappdb.hpp
C++/sysapp-cgi/: Makefile.am  configure.ac  database
C++/sysapp-cgi/src/: Makefile.am  application-server.cc  db.cc  db.hh  http-db.cc  http-db.hh  http.cc  http.hh  login-server.cc  login-server.hh  login.cc  logout.cc  server-elements.cc  server.cc  server.hh
C++/sysapp-gtk/: configure.ac
apidb/: Makefile.am  building-apidb  configure.ac  muposys-apidb.pc.in
apidb/src/: Makefile.am  apidb.hh  muposys-apidb.hh
apidb/tests/: Makefile.am  main.cc  v0.cc  v0.hh
cgi/: Makefile.am  application-main.cc  application-server.cc  application.cc  application.hh  html.cc  html.hh  http-db.cc  http-db.hh  http.cc  http.hh  login-main.cc  login.cc  login.hh  logout-main.cc  logout.cc  logout.hh  muposys-cgi.pc.in  muposys.pc.in  server-elements.cc  server.cc  server.hh  user-register.cc  userregister-methode.cc
cgi/user-mang/: Makefile.am
cgi/user-mang/permissions/: Add.cc  Add.hh  Makefile.am  add-main.cc  add.cc  add.hh  user-permiss-main.cc  user-permiss.cc  user-permiss.hh
core/: Makefile.am  configure.ac  core-v1.cbp  mps-core-v1.cbp  muposys-core.cbp  muposys-core.sln  version.h
core/0/: core.hh
core/1/: core.cc  core.hh
core/muposys-core/: muposys-core.vcxproj  (+1 more)
core/src/: Exception.cc  Exception.hh  Makefile.am  apidb.hh  core.cc  core.hh  main-load-db.cc  main-load-db.cc.save-failed  main.cc  muposys-core.pc.in  muposys-db.hh
core/tests/: Makefile.am  main.cc  v0.cc  v0.hh  v1.cc  v1.hh
db/: muposys.dia  sysapp.dia
desk/: Exception.hh  Makefile.am  build-package.sh  config-dev  configure.ac  desk-TableSaling.cc  desk-main.cc  desk-v1.cbp  desk-v2.cbp  desk.cc  desk.hh  desk.ui  muposys-desk.cbp  muposys-desk.iss  muposys-desk.ui  muposys.ui
desk/0/: desk-main.cc  desk.cc  desk.hh
desk/1/: desk-SearchItem.cc  desk-TableSaling.cc  desk-main.cc  desk.cc  desk.hh  muposys.glade  muposys.xml
desk/2/: desk-SearchItem.cc  desk-TableSaling.cc  desk-main.cc  desk.cc  desk.hh
desk/src/: Exception.cc  Makefile.am  TableSaling-v1.cc  TableSaling-v1.hh  TableSaling.cc  TableSaling.hh  config-cb.h  desk-TableSaling.cc  desk-main-devel-v1.cc  desk-main-v1.cc  desk-main.cc  desk-v1.cc  desk-v1.hh  desk.cc  desk.hh  ds-v1.hh  muposys-desk.pc.in  muposys.ui  resources.xml  splash-v1.cc  splash-v1.hh
desk/v1/: TableSaling.cc  TableSaling.hh  desk-main.cc  desk.cc  desk.hh
html/: index.html  install-client  login.html  template.html  themes.ods  user-admin.html  user-mang.html
ing/: UC-muposys.odt  muposys.odb  muposys.xmi  notes.txt  testinghttp.jmx
libmuposys-desk/: Makefile.am  configure.ac  libmuposys-desk-v1.cbp  mps-desk-v1.cbp  v0.cbp
libreoffice/: muposys.odb
po/: LINGUAS  POTFILES.in
src/: Makefile.am  main.cc
tests/: Makefile.am  main.cc  v0.cc  v0.hh
tests/site/: Site-v0.workspace  Site.cbp  check.c  check.cc  check.php  complex.php
tests/site/check/: Program.cs  check.sln
tests/site/check-asp/: check-asp.csproj  check-asp.sln  check.aspx
tests/site/check-asp/Properties/: launchSettings.json
web/: Makefile.am  configure.ac  install-web  muposys-web.cbp  muposys.net  web-v1.cbp
web/CS/: CS.sln
web/CS/Properties/: launchSettings.json
web/api/cs/: Program.cs  User.cs  cs.csproj  cs.sln
web/api/cs/Properties/: launchSettings.json
web/cgi/: Exception.cc  Makefile.am  application-main.cc  application.cc  application.hh  html.cc  html.hh  http-db.cc  http-db.hh  http.hh  login-main.cc  login.cc  login.hh  logout-main.cc  logout.cc  logout.hh  muposys-cgi.pc.in
web/cgi-1/: application-main.cc  application.cc  application.hh  html.cc  html.hh  http  login-main.cc  login.cc  login.hh  logout.cc  logout.hh
web/cgi-1/user-mang/permissions/: add-main.cc  add.hh
web/cgi/user-mang/permissions/: Makefile.am  add.cc  user-permiss.cc
web/html/: application.html  index.html  install-client  install-html  login.html
web/html/css/Mkos-Big-Sur/appearance/: muposys.css
web/html/css/Mkos-Big-Sur/icons/: application.css
web/html/js/: muposys.js
web/html/muposys-html/: index.html  userregister.html
web/html/muposys-html/css/: login.css
web/html/simple/: application.html  index.html  login.html  muposys.html  user-register.html
web/html/simple/css/: muposys.css
web/src/: Makefile.am  main.cc
web/tests/: main.cc  v1.cc  v1.hh
wp/: muposys.php
(+147 files in other folders)
