
AC_INIT(muposys-apidb, 0.2.0-alpha)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CXX

LT_INIT


PKG_CHECK_MODULES(OCTETOS, [octetos-core])

AC_DEFINE_UNQUOTED([MUPOSYS_APIDB], [true] ,[Signal for local compilation])

AC_ARG_ENABLE([os],[AS_HELP_STRING([--enable-os],[Enable configuration for particular OS])])
	case $enableval in
	  	archlinux)
			AC_DEFINE([LINUX_ARCH], [], [Enable configuration for Arch-Linux])
			AC_SUBST([DATABASE_DIR],[$datarootdir])
			AC_SUBST([DATABASE_FN],[http])
			AC_SUBST([USER_GROUP],[http:http])
			AC_DEFINE_UNQUOTED([DATABASE_DIR], ["$DATABASE_DIR"] ,[Full path for database file])
			AC_DEFINE_UNQUOTED([DATABASE_FN], ["$DATABASE_FN"] ,[Full path for database file])
			AC_DEFINE_UNQUOTED([DATABASE], ["$DATABASE_DIR/$DATABASE_FN"] ,[Full path for database file])
		;;
	  	debian) 
			AC_DEFINE([LINUX_DEBIAN], [], [Enable configuration for Debian])
		;;
	  	*)
			AC_MSG_ERROR([unknown option '$enable_os' for --enable-os])
		;;
	esac

AC_ARG_ENABLE([stick],[AS_HELP_STRING([--enable-stick],[Enable all software to ensure be runnable muposys(for developing/testing normally)])])
if test "x$enable_stick" = "xyes"; then 
	AM_CONDITIONAL(ENABLE_STICK, true)
else
	AM_CONDITIONAL(ENABLE_STICK, false)
fi

AC_ARG_ENABLE([tdd],[AS_HELP_STRING([--enable-tdd],[Enable Test-Drive Developing mode)])])
if test "x$enable_tdd" = "xyes"; then 
	AM_CONDITIONAL(MUPOSYS_APIDB_ENABLE_TDD, true)
	PKG_CHECK_MODULES(TDD, [cunit])
else
	AM_CONDITIONAL(MUPOSYS_APIDB_ENABLE_TDD, false)
fi

AM_CONDITIONAL(OCTETOS_DB_MEDIUMWORD,false)
AM_CONDITIONAL(DATABASE_ENGINE_MARIA,false)
AM_CONDITIONAL(DATABASE_ENGINE_MYSQL,false)
AM_CONDITIONAL(DATABASE_ENGINE_POSTGRESQL,false)
AC_ARG_ENABLE([database],[AS_HELP_STRING([--enable-database],[Enabling sopport for Database])])
case $enableval in
	maria)
		PKG_CHECK_MODULES(OCTETOS_DB, [octetos-db-maria])
		AM_CONDITIONAL(OCTETOS_DB_MEDIUMWORD,true)
		AM_CONDITIONAL(DATABASE_ENGINE_MARIA,true)
	;;
	mysql)
		PKG_CHECK_MODULES(OCTETOS_DB, [octetos-db-mysql])
		AM_CONDITIONAL(OCTETOS_DB_MEDIUMWORD,true)
		AM_CONDITIONAL(DATABASE_ENGINE_MYSQL,true)
	;;
	postgresql)
		PKG_CHECK_MODULES(OCTETOS_DB, [octetos-db-postgresql])
		AM_CONDITIONAL(OCTETOS_DB_MEDIUMWORD,true)
		AM_CONDITIONAL(DATABASE_ENGINE_POSTGRESQL,true)
	;;
	*)
		AC_MSG_ERROR([unknown option '$enable_database' for --enable-database])
	;;
esac


AC_OUTPUT([
Makefile
src/Makefile
src/muposys-apidb.pc
tests/Makefile
])
